Add form prototype

--- a/index.html
+++ b/index.html
@@ -24,14 +24,30 @@
                     Join Us
                     <ul>
                         <li class="last">Sign In</li>
-                        <li class="last">Sign Up</li>
+                        <li class="last">Sing Up</li>
                     </ul>
                 </li>
             </ul>
         </div>
     </div>
     <div class="main-content">
-        <div>Content</div>
+        <div >
+            <form class="form " id="form">
+                <div class="form__group">
+                    <input type="text" placeholder="Username" class="form__input" />
+                </div>
+
+                <div class="form__group">
+                    <input type="email" placeholder="Email" class="form__input" />
+                </div>
+
+                <div class="form__group">
+                    <input type="password" placeholder="Password" class="form__input" />
+                </div>
+
+                <button class="btn" type="button">Register</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
